# crush-engine

./: Cargo.toml  README.md
src/: engine.rs  error.rs  lib.rs  macros.rs  parser.rs
src/engine/: command.rs
tests/: engine_test.rs  string_behaviour.rs
