[package]
name = "krush-engine"
version = "0.1.0"
authors = ["Jorge Harrisonn <j.h.m.t.v.10@gmail.com>"]
edition = "2021"
license = "MIT"

description = "The engine that powers krush (the Kreative Rust Shell)"
readme = "README.md"
repository = "https://github.com/OJarrisonn/krush-engine"
keywords = ["interpreter", "shell"]
categories = ["command-line-interface", "parser-implementations"]


[lib]
name = "krush-engine"
edition = "2021"
path = "src/lib.rs"
doc = true
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]